# qgr-gen-2

./: MANIFEST.in  README.md  app.py  pyproject.toml  replit.md  requirements.txt  setup.py
attached_assets/: instr_1752478651235.md
core/: geometry.py  quantum_computing.py  quantum_information.py  spin_networks.py  spinfoam.py  wigner_symbols.py
docs/: README.md  how_to_extend.md  plot3d.md  plugins.md  quantum_sim.md  spinfoam_summation.md
examples/: simple_evolution.py  singularity_resolution.py
lqg_simulation/: __init__.py  __main__.py
lqg_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lqg_simulation/core/: __init__.py  spin_network.py
lqg_simulation/dynamics/: __init__.py  amplitudes.py  eprl_vertex.py  moves.py
lqg_simulation/examples/: __init__.py  lqg_interactive_demo.ipynb  observable_and_amplitude_demo.py  simple_simulation_flow.py
lqg_simulation/mathematics/: __init__.py  wigner_symbols.py
lqg_simulation/observables/: geometry.py
lqg_simulation/plotting/: __init__.py  plot3d.py  visualize.py
lqg_simulation/plugins/: quantum_spin_network_plugin.py  sample_observable_plugin.py
lqg_simulation/quantum/: quantum_sim.py
lqg_simulation/tests/: __init__.py  test_amplitudes.py  test_spinfoam_summation.py  test_wigner_symbols.py
lqg_simulation/utils/: __init__.py  config_io.py  plugin_loader.py
utils/: helpers.py  plotting.py  visualization.py
